# Persian-Readability

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  __init__.py  persian_readability.py  pyproject.toml  requirements.txt  test_persian_readability  test_persian_readability.py
.github/workflows/: tests.yml
persian_readability/: __init__.py  core.py
tests/: test_core.py
