[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "persian-readability"
version = "1.0.0"
description = "Flesch–Dayani readability score for Persian text"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mohammad Pirouzan", email = "your@email.com" }]
keywords = ["persian", "farsi", "readability", "nlp", "flesch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Persian",
]
requires-python = ">=3.7"
dependencies = ["hazm"]

[project.optional-dependencies]
pos = ["parsivar"]

[project.scripts]
persian-readability = "persian_readability.core:main"

[project.urls]
Homepage = "https://github.com/Drpirouzan/Persian-Readability"
